# scrapy-zen

./: .env.example  .gitignore  docker-compose.yml  pyproject.toml  test.py
scrapy_zen/: logformatter.py  middlewares.py  pipelines.py
